# sysrv

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  build.py  run.py
.devcontainer/: devcontainer.json
.github/: build-docker-image.yml
.github/workflows/: build-docker-image.yml
docker/: Dockerfile
hal/: CMakeLists.txt  hal.h
hal/rv64/: CMakeLists.txt  cpu.c  debug.c  irq.c  paging.h  sbicall.c  sbicall.h  sv39_vm.c  sv48_vm.c
kernel/: CMakeLists.txt  kmain.c  panic.c  panic.h
kernel/arch/: arch.h
kernel/arch/rv64/: init.c  linker.ld
kernel/boot/rv64/: start.s
kernel/drivers/fdt/: fdt.c  fdt.h
kernel/kstdlib/: CMakeLists.txt  stdio.c  stdio.h  string.c  string.h
kernel/mm/: kalloc.c  kalloc.h
kernel/mm/phys/: kpalloc.c  kpalloc.h
meta/cmake/: rv64.cmake
